--- a/EclipseUltimate/EclipseUltimate.theme.css
+++ b/EclipseUltimate/EclipseUltimate.theme.css
@@ -1,4 +1,4 @@
-@import url(https://nextr0ll.github.io/Eclipse/core.css);
+@import url(https://pandacatplayz.github.io/EclipseUltimate/theme.css);
 :root {
    --rgb: 228, 59, 68; /* Main color */
    --main-black: #1C2120;
