--- a/EclipseUltimate/EclipseUltimate.theme.css
+++ b/EclipseUltimate/EclipseUltimate.theme.css
@@ -1,3 +1,11 @@
+/**
+ * @name EclipseUltimate
+ * @author PandaCatPlayz & Next
+ * @description Ultimate Dark Theme
+ * @version 0.1
+ * @authorId 496816561244471347 & 319955529873227787
+ */
+
 @import url(https://pandacatplayz.github.io/EclipseUltimate/theme.css);
 :root {
    --rgb: 228, 59, 68; /* Main color */
