--- a/EclipseUltimate/EclipseUltimate.theme.css
+++ b/EclipseUltimate/EclipseUltimate.theme.css
@@ -1,16 +1,22 @@
 /**
  * @name EclipseUltimate
- * @author PandaCatPlayz & Next
- * @description Ultimate Dark Theme
+ * @author PandaCatPlayz
+ * @description Ultimate Dark Theme Based On Next's Eclipse Simple Dark Theme
  * @version 0.1
- * @authorId 496816561244471347 & 319955529873227787
+ * @authorId 496816561244471347
  */
 
 @import url(https://pandacatplayz.github.io/EclipseUltimate/theme.css);
 :root {
-   --rgb: 228, 59, 68; /* Main color */
+   /* Main color */
+   --rgb: 228, 59, 68;
+
+   /* Background Colors */
    --main-black: #1C2120;
    --secondary-black: #111411;
    --third-black: #171b19;
    --fourth-black: #1a1f1d;
+
+   /* Link Color */
+   --link-color: #ffffff;
 }
