--- a/EclipseUltimate/theme.css
+++ b/EclipseUltimate/theme.css
@@ -923,8 +923,8 @@
     position: absolute;
     left: -3px;
     height: 100%;
-    width: 250px;
-    border-radius: 4px 4px 4px 4px;
+    width: 200px;
+    border-radius: 4px 0 0 4px;
     background: rgba(var(--rgb),1);
     z-index: 0;
   }
