--- a/BetterDiscord/Themes/StandaloneUSRBG/usrgbStandalone.theme.css
+++ b/BetterDiscord/Themes/StandaloneUSRBG/usrgbStandalone.theme.css
@@ -1,10 +1,18 @@
+/**
+ * @name StandaloneUSRBG
+ * @author PandaCatPlayz
+ * @description Standalone UserBackground
+ * @version 0.1
+ * @authorId 496816561244471347
+ */
+
 @import url('https://discord-custom-covers.github.io/usrbg/dist/usrbg.css');
 
 .header-QKLPzZ {
 	transform: translateZ(0);
 }
 
-.header-QKLPzZ .wrapper-1VLyxH::before {
+.header-QKLPzZ .wrapper-3t9DeA::before {
 	content: '';
 	position: fixed;
 	top: 0;
@@ -21,18 +29,18 @@
 	z-index: 1;
 }
 
-.userPopout-2j1gM4 {
+.userPopout-xaxa6l {
 	overflow: hidden;
 	transform: translateZ(0) !important;
 	--USRBG-banner-height: 60px;
 }
 
-.userPopout-2j1gM4[style*="-user-"] {
+.userPopout-xaxa6l[style*="-user-"] {
 	--USRBG-banner-height: 120px;
 	--USRBG-avatar-offset: 76px;
 }
 
-.userPopout-2j1gM4[style*="-user-"] .popoutBanner-3cqRD9 {
+.userPopout-xaxa6l[style*="-user-"] .popoutBanner-19WKGg {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: var(--user-popout-position, center) center;
@@ -40,16 +48,16 @@
 	height: var(--USRBG-banner-height, 120px);
 }
 
-.userPopout-2j1gM4[style*="-user-"] .avatarWrapperNormal-ahVUaC {
+.userPopout-xaxa6l[style*="-user-"] .avatarWrapperNormal-26WQIb {
   	top: var(--USRBG-avatar-offset, 76px);
 }
 
-.userPopout-2j1gM4:not([style*="-user-"]) .avatar-2Vndt_,
-.userPopout-2j1gM4:not([style*="-user-"]) .avatarHint-k7pYop {
+.userPopout-xaxa6l:not([style*="-user-"]) .avatar-37jOim,
+.userPopout-xaxa6l:not([style*="-user-"]) .avatarHint-2A3RNb {
 	z-index: 1;
 }
 
-.userPopout-2j1gM4:not([style*="-user-"]) .avatar-2Vndt_::after {
+.userPopout-xaxa6l:not([style*="-user-"]) .avatar-37jOim::after {
 	content: '';
 	position: fixed;
 	top: 0;
