--- a/TexturePackHub/assets/css/main.css
+++ b/TexturePackHub/assets/css/main.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
- * Bootswatch v5.2.3 (https://bootswatch.com)
- * Theme: vapor
+ * Bootswatch v5.2.3 (https://bootswatch.com) & sakuradev (https://pandacatplayz.github.io/)
+ * Theme: vaporwave
  * Copyright 2012-2022 Thomas Park
  * Licensed under MIT
  * Based on Bootstrap
@@ -105,6 +105,24 @@ body {
   background-color: var(--bs-body-bg);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+div.centered-title {
+  display: block;
+  text-align: center;
+  padding: 50px;
+}
+div.main-div {
+  display: block;
+  margin: 25px;
+}
+
+img.featured {
+  display: block;
+  width: 75%;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 hr {
@@ -602,7 +620,7 @@ progress {
   color: rgba(50, 251, 226, 0.3);
 }
 .blockquote-footer::before {
-  content: "— ";
+  content: "— ";
 }
 
 .img-fluid {
