--- a/TexturePackHub/assets/css/main.css
+++ b/TexturePackHub/assets/css/main.css
@@ -112,7 +112,7 @@ div.centered-title {
   padding: 50px;
 }
 div.main-div {
-  margin: 25px;
+  margin: 50px;
 }
 
 img.featured {
@@ -2827,12 +2827,12 @@ textarea.form-control-lg {
 
 .btn {
   --bs-btn-padding-x: 0.75rem;
-  --bs-btn-padding-y: 0.375rem;
+  --bs-btn-padding-y: 0.475rem;
   --bs-btn-font-family: ;
   --bs-btn-font-size: 1rem;
   --bs-btn-font-weight: 400;
   --bs-btn-line-height: 1.5;
-  --bs-btn-color: #32fbe2;
+  --bs-btn-color: #FFFFFF;
   --bs-btn-bg: transparent;
   --bs-btn-border-width: 0;
   --bs-btn-border-color: transparent;
