--- a/TexturePackHub/assets/css/main.css
+++ b/TexturePackHub/assets/css/main.css
@@ -122,6 +122,13 @@ img.featured {
   margin-left: auto;
   margin-right: auto;
 }
+img.banner {
+  display: block;
+  height: 45%;
+  width: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 hr {
   margin: 1rem 0;
