--- a/TexturePackHub/assets/css/main.css
+++ b/TexturePackHub/assets/css/main.css
@@ -124,11 +124,9 @@ img.featured {
 }
 img.banner {
   display: block;
-  height: 100px;
-  width: 1920px;
-  overflow: hidden;
-  margin-left: 0px;
-  margin-right: 0px;
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
 }
 
 hr {
